css page: myprofile usersDetails

--- a/src/app/features/feature-b/pages/myprofile/myprofile.component.html
+++ b/src/app/features/feature-b/pages/myprofile/myprofile.component.html
@@ -12,10 +12,10 @@
                         <hr>
                     </header>
                     <ul class="link-list">
-                        <li><a (click)="myPosts()">Ver mis posts</a></li>
-                        <li><a (click)="myAlbums()">Ver mis albums</a></li>
-                        <li><a (click)="myTodos()">Ver mis TO DOs</a></li>
-                        <li *ngIf="back"><a (click)="menuBack()">Volver</a></li>
+                        <li class="txt-center"><a (click)="myPosts()">Ver mis posts</a></li>
+                        <li class="txt-center"><a (click)="myAlbums()">Ver mis albums</a></li>
+                        <li class="txt-center"><a (click)="myTodos()">Ver mis TO DOs</a></li>
+                        <li class="txt-center" *ngIf="back"><a (click)="menuBack()">Volver</a></li>
                     </ul>
                 </section>
             </div>
