--- a/src/app/features/feature-b/pages/users-details/users-details.component.html
+++ b/src/app/features/feature-b/pages/users-details/users-details.component.html
@@ -11,10 +11,10 @@
                         <hr>
                     </header>
                     <ul class="link-list">
-                        <li><a (click)="userPosts()">Ver sus posts</a></li>
-                        <li><a (click)="userAlbums()">Ver sus albums</a></li>
-                        <li><a (click)="userTodos()">Ver sus TO DOs</a></li>
-                        <li *ngIf="back"><a (click)="menuBack()">Volver</a></li>
+                        <li class="txt-center"><a (click)="userPosts()">Ver sus posts</a></li>
+                        <li class="txt-center"><a (click)="userAlbums()">Ver sus albums</a></li>
+                        <li class="txt-center"><a (click)="userTodos()">Ver sus TO DOs</a></li>
+                        <li class="txt-center" *ngIf="back"><a (click)="menuBack()">Volver</a></li>
                     </ul>
                 </section>
             </div>
